[project]
name = "region-to-region-associate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda12x>=13.6.0",
    "dask>=2026.1.2",
    "joblib>=1.5.3",
    "mlxtend>=0.24.0",
    "netcdf4>=1.7.4",
    "networkit>=11.2.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "xarray>=2026.1.0",
]
